Page MenuHome GnuPG

Add "prehash" support to DSA and ECDSA signing
Closed, ResolvedPublic

Description

EdDSA can be HashEdDSA which does internal hashing by "prehash" function.
The usage is:

	(data
	 (flags prehash)
	 (hash-algo <algo>)
	 (value <value>))

That is, adding the prehash flag, value means input to be hashed, then signed.

It is good to add this support to DSA and ECDSA.